--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=home-storage
 server.port=8000
-save.path=C:/Users/Laurent/Desktop/home-storage/files/user/
+storage.location=C:/Users/Laurent/Desktop/home-storage/files/user/
