--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,22 @@
+#=============MAIN=============
 spring.application.name=home-storage
+
+#=============SERVER=============
 server.port=8000
+
+#=============STORAGE=============
 storage.location=C:/Users/Laurent/Desktop/home-storage/files/user/
+
+#=============MULTIPART=============
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=2048MB
+spring.servlet.multipart.max-request-size=2048MB
+
+#=============DATABASE=============
+spring.datasource.url=jdbc:mysql://localhost:3306/home-storage
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
