--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/home-storage?sessionVariables=
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
