externalize CORS configurations

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 #=============MAIN=============
 spring.application.name=home-storage
 
+
+#=============SECURITY=============
+sec.cors.authorizedHots=http://localhost:5173
+sec.cors.authorizedMethods=GET,POST,PUT,DELETE
+sec.cors.authorizedHeader=Authorization,Content-type
+
 #=============SERVER=============
 server.port=8000
 
