Fixe user authentication

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=home-storage
 
 #=============SECURITY=============
 sec.cors.authorizedHots=http://localhost:5173
-sec.cors.authorizedMethods=GET,POST,PUT,DELETE
+sec.cors.authorizedMethods=GET,POST,PUT,DELETE,OPTION
 sec.cors.authorizedHeader=Authorization,Content-type
 
 #=============SERVER=============
@@ -23,5 +23,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/home-storage?sessionVariables=
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
