--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -19,9 +19,11 @@ spring.servlet.multipart.max-file-size=2048MB
 spring.servlet.multipart.max-request-size=2048MB
 
 #=============DATABASE=============
-spring.datasource.url=jdbc:mysql://localhost:3306/home-storage?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://192.168.15.118:9000/hs_db
+spring.datasource.username=hs_user
+spring.datasource.password=$hs_prod!
+
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
