--- a/back/build.gradle
+++ b/back/build.gradle
@@ -4,6 +4,10 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.6'
 }
 
+springBoot {
+	mainClass = 'be.naaturel.homestorage.HomeStorageApplication'
+}
+
 group = 'be.naaturel'
 version = '0.0.1-SNAPSHOT'
 
