--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -19,9 +19,9 @@ spring.servlet.multipart.max-file-size=2048MB
 spring.servlet.multipart.max-request-size=2048MB
 
 #=============DATABASE=============
-spring.datasource.url=jdbc:mysql://192.168.15.118:9000/hs_db_test
-spring.datasource.username=hs_user
-spring.datasource.password=$hs_test!
+spring.datasource.url=jdbc:${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
