--- a/front/package.json
+++ b/front/package.json
@@ -9,16 +9,27 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
+	"dependencies": {
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"crypto-js": "^4.2.0",
+		"svelte": "^4.2.7",
+		"svelte-check": "^4.0.0",
+		"svelte-use-form": "^2.10.0",
+		"typescript": "^5.0.0"
+	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/crypto-js": "^4.2.2",
+		"crypto-js": "^4.2.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
 		"svelte-use-form": "^2.10.0",
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-
 	"type": "module"
 }
